# cuda-kernels

./: .gitignore  CMakeLists.txt  README.md  build.sh  requirements.txt  setup.py
core/: data_ptr.h
core/tests/: test_cpu2cuda.cpp
cu_tests/: probe.cpp  test_cpu2cuda.cpp  test_data_ptr.cpp  test_empty.cpp  test_matmul_naive.cpp  test_tensor.cpp  test_uniform.cpp
includes/: data_ptr.h  device.h  tensor.h
j6q_cu_ext/: __init__.py  ops.py
j6q_cu_ext/csrc/: register_all.cpp  stub.cpp
j6q_cu_ext/csrc/cuda/: conv2d_naive.cu  matmul_cute.cu  matmul_naive.cu  maxpool2d_naive.cu  test.cu
profiling/: README.md  launch_all_trace.sh
src/: data_ptr.cpp  tensor.cpp
src/core/: data_ptr.cpp  data_ptr.h  device.h
src/core/tests/: probe.cpp  test_cpu2cuda.cpp  test_data_ptr.cpp
src/profiling/: launch_trace.sh  macros.h
src/tensor/: macros.h  ops.h  tensor.cpp  tensor.h  utils.h
src/tensor/native/: arange.cu  kernels.cuh  matmul.cu
src/tensor/native/cuda/: arange.cu  matmul_naive.cpp  matmul_naive.cu
src/tensor/native/tests/: arange.cpp  matmul.cpp
src/tensor/tests/: test_empty.cpp  test_matmul_naive.cpp  test_uniform.cpp
src/torch/tests/: test.py
tensor/: macros.h  ops.h  tensor.h
tensor/native/: kernels.cuh  matmul.cu
tensor/native/cuda/: matmul_tile.cu
tensor/native/tests/: matmul.cpp
tensor/tests/: test_empty.cpp  test_matmul_naive.cpp
test/: test.py  test_matmul_naive.py  utils.py
torch/tests/: utils.py
torch_tests/: test_maxpool2d_naive.py
